widened scrollama, content fixes, header alignment

--- a/scrollama_mod.css
+++ b/scrollama_mod.css
@@ -13,12 +13,12 @@ strong, b {
 .scrolly {
   display: -webkit-box;
   display: flex;
-  width: 100%;
-  max-width: 1020px;
+  margin-right: 5%;
+  margin-left: 5%;
 }
 
 article {
-  width: 36%;
+  width: 70%;
 }
 
 .step {
@@ -48,7 +48,7 @@ article {
   padding: 0;
   #font-weight: 300;
   font-family: 'helveticaneueregular', sans-serif;
-  font-size: 16px;
+  font-size: 20px;
   line-height: 30px;
   letter-spacing: 0.15px;
   color: lightgray;
@@ -67,9 +67,9 @@ article {
 figure.sticky {
   position: -webkit-sticky;
   position: sticky;
-  width: 64%;
+  width: 100%;
   height: 100%;
-  margin: 0;
+  margin-right: 5%;
   top: 5%;
   left: 0;
 }
@@ -81,7 +81,7 @@ figure.sticky {
 }
 
 .bar-outer {
-  margin-right: 10%;
+  margin-right: 0%;
   height: 85vh;
   display: flex;
 }
